SERVER-17416 MMAP V1 journal thread should check for deadlocks

Also improve the reporting of the Locker::dump function.