src/mongo/db/commands/oplog_note.cpp
@@ -32,8 +32,9 @@
 #include "mongo/db/auth/action_type.h"
 #include "mongo/db/auth/authorization_session.h"
 #include "mongo/db/auth/resource_pattern.h"
-#include "mongo/db/jsobj.h"
 #include "mongo/db/commands.h"
+#include "mongo/db/jsobj.h"
+#include "mongo/db/operation_context.h"
 #include "mongo/db/repl/oplog.h"
 #include "mongo/db/repl/replication_coordinator_global.h"
 
@@ -77,7 +78,12 @@ namespace mongo {
                 return appendCommandStatus(result, status);
             }
 
+            ScopedTransaction scopedXact(txn, MODE_X);
+            Lock::GlobalWrite globalWrite(txn->lockState());
+
+            WriteUnitOfWork wuow(txn);
             repl::logOpComment(txn, dataElement.Obj());
+            wuow.commit();
             return true;
         }
 
