src/mongo/db/repl/master_slave.cpp
@@ -1280,7 +1280,9 @@ namespace repl {
                 toSleep = 10;
 
                 try {
+                    WriteUnitOfWork wuow(&txn);
                     logKeepalive(&txn);
+                    wuow.commit();
                 }
                 catch (...) {
                     log() << "caught exception in replMasterThread()" << endl;
