src/mongo/db/repl/oplog.cpp
@@ -218,7 +218,6 @@ namespace {
             return;
         }
 
-        ScopedTransaction transaction(txn, MODE_IX);
         Lock::DBLock lk(txn->lockState(), "local", MODE_IX);
         Lock::OplogIntentWriteLock oplogLk(txn->lockState());
 
@@ -237,9 +236,6 @@ namespace {
             severe() << "logOp() but can't accept write to collection " << ns;
             fassertFailed(17405);
         }
-
-        Client::Context ctx(txn, rsoplog, localDB);
-        WriteUnitOfWork wunit(txn);
 
         oplogLk.serializeIfNeeded();
         std::pair<OpTime, long long> slot = getNextOpTime(txn,
@@ -270,9 +266,6 @@ namespace {
         checkOplogInsert( localOplogRSCollection->insertDocument( txn, &writer, false ) );
 
         txn->getClient()->setLastOp( slot.first );
-
-        wunit.commit();
-
     }
 
     void _logOpOld(OperationContext* txn,
@@ -289,7 +282,6 @@ namespace {
             return;
         }
 
-        ScopedTransaction transaction(txn, MODE_IX);
         Lock::DBLock lk(txn->lockState(), "local", MODE_IX);
 
         if( logNS == 0 ) {
@@ -305,9 +297,6 @@ namespace {
             localOplogMainCollection = localDB->getCollection(logNS);
             invariant(localOplogMainCollection);
         }
-
-        Client::Context ctx(txn, logNS, localDB);
-        WriteUnitOfWork wunit(txn);
 
         ReplicationCoordinator* replCoord = getGlobalReplicationCoordinator();
         std::pair<OpTime,long long> slot = getNextOpTime(txn,
@@ -336,8 +325,6 @@ namespace {
         checkOplogInsert( localOplogMainCollection->insertDocument( txn, &writer, false ) );
 
         txn->getClient()->setLastOp(slot.first);
-
-        wunit.commit();
     }
 
     void (*_logOp)(OperationContext* txn,
